--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeWeek Hackaton</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>
         Hello World
     </h1>
+    <ul>
+        <li>Orange</li>
+        <li>Blue</li>
+        <li>Green</li>
+    </ul>
 </body>
 </html>
